package edu.uees.patrones.observer;

public interface ObservadorReserva {

    void actualizar(String estado);
}