package edu.uees.patrones.strategy;

public interface PoliticaCancelacion {

    boolean puedeCancelar(int horasAntes);
}